# uncovr-templates

./: .gitignore  README.md
api/: .env.example  Cargo.toml
api/src/: main.rs
default/: Cargo.toml  README.md
default/src/: main.rs  routes.rs
default/src/api/: health.rs  routes.rs
default/src/app/: index.rs  routes.rs
default/src/settings/: mod.rs  service.rs  vars.rs
default/templates/: base.html  index.html  not_found.html
